--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -176,7 +176,8 @@
 
         <div class="row d-sm-block d-md-none">
             <div class="col g-0">
-                <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;" alt="Banh Mi/Sandwich">
+                <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;"
+                    alt="Banh Mi/Sandwich">
             </div>
         </div>
 
@@ -239,7 +240,7 @@
             </div>
 
         </div>
-        <div class="row topMargin">
+        <div class="row topMargin bottomMargin">
             <div class="col g-0 d-none d-lg-block">
                 <img class="menuImage" src="../assssssssssssssssssssssssets/Sandwich3.png"
                     style="width: 870px; height: 797px;" alt="Banh Mi/Sandwich">
@@ -274,7 +275,8 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row centerJ">
-                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/Review4.png" alt="Customer Profile Picture">
+                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/Review4.png"
+                                    alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
                                 <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
@@ -291,7 +293,8 @@
                                 </p>
                             </div>
                             <div class="row centerJ">
-                                <img class="quotesJ" style="margin-top: 32px;" src="../assets/Quotes.png" alt="Quotation Marks">
+                                <img class="quotesJ" style="margin-top: 32px;" src="../assets/Quotes.png"
+                                    alt="Quotation Marks">
                             </div>
                             <div class="row">
                                 <div class="txtCenterJ">Evelyn D.</div>
@@ -307,7 +310,8 @@
                         </div>
                         <div class="carousel-item">
                             <div class="row centerJ">
-                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/review5.png" alt="Customer Profile Picture">
+                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/review5.png"
+                                    alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
                                 <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
@@ -347,7 +351,8 @@
                         </div>
                         <div class="carousel-item">
                             <div class="row centerJ">
-                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/Review6.png" alt="Customer Profile Picture">
+                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/Review6.png"
+                                    alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
                                 <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
@@ -365,7 +370,8 @@
                                 </p>
                             </div>
                             <div class="row centerJ">
-                                <img class="quotesJ"  style="margin-top: 32px;" src="../assets/Quotes.png" alt="Quotation Marks">
+                                <img class="quotesJ" style="margin-top: 32px;" src="../assets/Quotes.png"
+                                    alt="Quotation Marks">
                             </div>
                             <div class="row">
                                 <div class="txtCenterJ">Dee M.</div>
@@ -399,90 +405,94 @@
 
     <hr class="yellowJ hrLineJ hrMargin">
 
-  <div class="container-fluid footerPaddingJ disappearJ">
-    <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
-      <div class="col-4" style="padding-left: 3%;">
-        <div class="row yellowJ abrilFatfaceJ">
-          <h2 class="footerFontSize3">Best Sandwiches</h2>
-        </div>
-        <div class="row yellowJ abrilFatfaceJ">
-          <h2 class="footerFontSize3">& Smoothies</h2>
-        </div>
-      </div>
-      <div class="col" style="padding-left: 2%;">
-        <div class="row">
-          <div class="col">
-            <div class="row sansCollectionJ">
-              <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-              <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-              <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-              <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+    <div class="container-fluid footerPaddingJ disappearJ">
+        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+            <div class="col-4" style="padding-left: 3%;">
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">Best Sandwiches</h2>
+                </div>
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">& Smoothies</h2>
+                </div>
             </div>
-          </div>
+            <div class="col" style="padding-left: 2%;">
+                <div class="row">
+                    <div class="col">
+                        <div class="row sansCollectionJ">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+                        </div>
+                    </div>
 
-          <div class="col">
-            <div class="row sansCollectionJ">
-              <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-              <p class="yellowJ footerFontSize">
-                <img src="../assets/phone symbol.png" alt="Phone Icon">
-                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
-              </p>
-              <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
-              <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
-            </div>
-          </div>
+                    <div class="col">
+                        <div class="row sansCollectionJ">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                            <p class="yellowJ footerFontSize">
+                                <img src="../assets/phone symbol.png" alt="Phone Icon">
+                                <a class="yellowJ" href="" style="padding-left: 15px;">(209) 475-0652</a>
+                            </p>
+                            <p class="yellowJ footerFontSize">3330 E Hammer Ln Ste</p>
+                            <p class="yellowJ footerFontSize">C Stockton, CA 95212</p>
+                        </div>
+                    </div>
 
-          <div class="col">
-            <div class="row">
-              <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                        </div>
+                        <div class="row">
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="FaceBook Icon">
+                            </a>
+                            <a class="footerIconsJ"
+                                href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="Yelp Icon">
+                            </a>
+                            <a class="footerIconsJ" href="../index.html">
+                                <img class="img-fluid" src="../assets/bestSandwich logo.png"
+                                    alt="Best Sandwiches & Smoothies Logo">
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-              <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-                <img class="img-fluid" src="../assets/FACEBOOK.png" alt="FaceBook Icon">
-              </a>
-              <a class="footerIconsJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-                <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="Yelp Icon">
-              </a>
-              <a class="footerIconsJ" href="../index.html">
-                <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="Best Sandwiches & Smoothies Logo">
-              </a>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 
-  <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
-    <div class="row">
-      <div class="col">
-        <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
-          <img class="phoneImageJ" src="../assets/phone symbol.png" alt="Phone Icon">
-          <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
-        </p>
-        <p class="yellowJ footerFontSize" style="width: 115px;">
-          3330 E Hammer Ln Ste C Stockton, CA 95212
-        </p>
-      </div>
-      <div class="col">
-        <div class="row rightJ">
-          <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
-            <img class="img-fluid" src="../assets/FACEBOOK.png" alt="FaceBook Icon">
-          </a>
-          <a class="footerIconsMobileJ" href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
-            <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="Yelp Icon">
-          </a>
-          <a class="footerIconsMobileJ" href="../index.html">
-            <img class="img-fluid" src="../assets/bestSandwich logo.png" alt="Best Sandwiches & Smoothies Logo">
-          </a>
-        </div>
+    <div class="container-fluid appearJ" style="padding-left: 20px; padding-right: 20px;">
         <div class="row">
-          <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
-            Smoothies</p>
+            <div class="col">
+                <p class="yellowJ footerFontSize" style="margin-bottom: 5px;">
+                    <img class="phoneImageJ" src="../assets/phone symbol.png" alt="Phone Icon">
+                    <a class="yellowJ" href="" style="padding-left: 15px">(209) 475-0652</a>
+                </p>
+                <p class="yellowJ footerFontSize" style="width: 115px;">
+                    3330 E Hammer Ln Ste C Stockton, CA 95212
+                </p>
+            </div>
+            <div class="col">
+                <div class="row rightJ">
+                    <a class="footerIconsMobileJ" href="https://m.facebook.com/profile.php?id=111693338885516">
+                        <img class="img-fluid" src="../assets/FACEBOOK.png" alt="FaceBook Icon">
+                    </a>
+                    <a class="footerIconsMobileJ"
+                        href="https://www.yelp.com/biz/best-sandwiches-and-smoothies-stockton">
+                        <img class="img-fluid" src="../assets/icons8-yelp-100.png" alt="Yelp Icon">
+                    </a>
+                    <a class="footerIconsMobileJ" href="../index.html">
+                        <img class="img-fluid" src="../assets/bestSandwich logo.png"
+                            alt="Best Sandwiches & Smoothies Logo">
+                    </a>
+                </div>
+                <div class="row">
+                    <p class="bSMobileFooterJ yellowJ" style="padding-top: 8px; text-align: end;">Best Sandwiches &
+                        Smoothies</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
 
 
