--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide disappearJ" data-bs-ride="carousel" >
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="5000">
                 <img src="./assets/realBanhMI.png" class="d-block w-100 carouselHeightJ imgCoverJ"
@@ -86,6 +86,25 @@
             </div>
             <div class="carousel-item" data-bs-interval="5000">
                 <img src="./assets/realBanhMi3.png" class="d-block w-100 carouselHeightJ imgCoverJ"
+                    alt="Picture of tasty Banh Mi">
+            </div>
+
+        </div>
+    </div>
+
+    <div id="carouselExampleSlidesOnly appearJ" class="carousel slide" data-bs-ride="carousel" >
+        <div class="carousel-inner">
+
+            <div class="carousel-item active" data-bs-interval="5000">
+                <img src="./assets/mobileCarousel1.png" class="d-block w-100 carouselHeightJ imgCoverJ"
+                    alt="Picture of tasty Banh Mi">
+            </div>
+            <div class="carousel-item" data-bs-interval="5000">
+                <img src="./assets/mobileCarousel2.png" class="d-block w-100 carouselHeightJ imgCoverJ"
+                    alt="Picture of tasty Banh Mi">
+            </div>
+            <div class="carousel-item" data-bs-interval="5000">
+                <img src="./assets/mobileCarousel3.png" class="d-block w-100 carouselHeightJ imgCoverJ"
                     alt="Picture of tasty Banh Mi">
             </div>
         </div>
@@ -176,7 +195,7 @@
         <div class="row evenJ homePageMargin disappearJ" style="margin-top: 75px;">
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid" src="./assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
+                    <img class="img-fluid hover" src="./assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
                                 class="sandwichJ">Grilled Pork</span> $5.79</p>
