--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -74,7 +74,7 @@
 
     <video autoplay loop class="videoJ disappearJ" src="../assets/pexels-marygrace-caneba-5452068 (2160p).mp4"></video>
 
-    <h1 class="absoluteJ whiteJ behindTheCounterJ sansCollectionJ">Behind The Counter</h1>
+    <h1 class="absoluteJ whiteJ behindTheCounterJ sansCollectionJ" style="width: 910px;">Behind The Counter</h1>
 
 
     <div class="container-fluid bgWhiteJ abUsMargin">
