--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </div>
 
-    <div id="carouselExampleSlidesOnly appearJ" class="carousel slide" data-bs-ride="carousel" >
+    <div id="carouselExampleSlidesOnly " class="carousel slide appearJ" data-bs-ride="carousel" >
         <div class="carousel-inner">
 
             <div class="carousel-item active" data-bs-interval="5000">
@@ -114,8 +114,7 @@
         hunger away"
     </h1>
 
-    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View
-            Menu <img src="./assets/viewMenuArr.png" style="padding-bottom: 10px; padding-left: 4px;" alt=""></button></a>
+    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View Menu <img src="./assets/viewMenuArr.png" class="disappearJ" style="padding-bottom: 10px; padding-left: 4px;" alt=""> <img src="./assets/mobile" class="appearJ" alt=""></button></a>
 
     <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 100px;">
         <div class="row disappearJ">
@@ -211,7 +210,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid" src="./assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
+                    <img class="img-fluid hover" src="./assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
                                 class="sandwichJ">Vegetarian</span> $5.79</p>
@@ -227,7 +226,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid" src="./assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
+                    <img class="img-fluid hover" src="./assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 bbqTxtJ">Top Seller <span
                                 class="sandwichJ">BBQ Pork</span> $5.79</p>
@@ -243,7 +242,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid" src="./assets/banhMiCard4.png" class="card-img-top" alt="Picture of Ham and Cheese Croissant">
+                    <img class="img-fluid hover" src="./assets/banhMiCard4.png" class="card-img-top" alt="Picture of Ham and Cheese Croissant">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Croissant</p>
                         <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">H & C Croissant</p>
@@ -261,8 +260,8 @@
                 </div>
             </div>
             <div class="col centerJ">
-                <div class="card cardJ ">
-                    <img class="img-fluid" src="./assets/banhMiCard5.png" class="card-img-top" alt="Picture of Ham and Cheese Baguette">
+                <div class="card cardJ">
+                    <img class="img-fluid hover" src="./assets/banhMiCard5.png" class="card-img-top" alt="Picture of Ham and Cheese Baguette">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Baguette</p>
                         <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">H & C Baguette</p>
@@ -304,7 +303,7 @@
         <div class="row evenJ homePageMargin disappearJ" style="margin-top: 75px;">
             <div class="col centerJ">
                 <div class="card cardJ" >
-                    <img src="./assets/drinkCard1.png" class="card-img-top imgHeightJ" alt="...">
+                    <img src="./assets/drinkCard1.png" class="card-img-top imgHeightJ hover2" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 taroTxtJ">#1 Favorite <span
                                 class="sandwichJ">Tangy Taro</span> $5.89</p>
@@ -320,7 +319,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ" >
-                    <img src="./assets/drinkCard2.png" class="card-img-top imgHeightJ" alt="...">
+                    <img src="./assets/drinkCard2.png" class="card-img-top imgHeightJ hover2" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">"The Go To Drink" <span
                                 class="sandwichJ">Green Tea Gangbusters</span> $5.89</p>
@@ -336,7 +335,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ" >
-                    <img src="./assets/drinkCard3.png" class="card-img-top imgHeightJ" alt="...">
+                    <img src="./assets/drinkCard3.png" class="card-img-top imgHeightJ hover2" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 thaiTeaTxtJ">Top Seller <span
                                 class="sandwichJ">Iced Thai Tea</span> $5.69</p>
@@ -352,7 +351,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ" >
-                    <img src="./assets/drinkCard4.png" class="card-img-top imgHeightJ" alt="...">
+                    <img src="./assets/drinkCard4.png" class="card-img-top imgHeightJ hover2" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 avocadoTxtJ">#1 Recommended <span
                                 class="sandwichJ">Appealing Avocado</span> $5.89</p>
@@ -368,7 +367,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img src="./assets/drinkCard5.png" class="card-img-top imgHeightJ" alt="...">
+                    <img src="./assets/drinkCard5.png" class="card-img-top imgHeightJ hover2" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#2 Recommended</p>
                         <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">HoneyDew</p>
@@ -386,7 +385,7 @@
                 </div>
             </div>
         </div>
-        <div class="row centerJ" style="padding-top: 40px; padding-bottom: 75px;">
+        <div class="row centerJ mt-1" style="padding-top: 40px; padding-bottom: 75px;">
             <button class="btn btn-primary sansCollectionJ viewSandwichesBtn">View Drinks<img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 30px; padding-bottom: 2px;"></button>
         </div>
         <div class="container-fluid reviewPaddingJ disappearJ">
