--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="" style="width: 100%;">
                             <div class="row">
-                                <div class="col centerJ">
+                                <div class="col centerJ blackBg">
                                     <div class="row evenJ navRowJ">
                                         <div class="accordion accordion-flush menuNavJ" id="accordionFlushExample">
                                             <div class="accordion-item"
@@ -114,11 +114,11 @@
         hunger away"
     </h1>
 
-    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View Menu <img src="./assets/viewMenuArr.png" class="disappearJ" style="padding-bottom: 10px; padding-left: 4px;" alt=""> <img src="./assets/mobile" class="appearJ" alt=""></button></a>
+    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View Menu <img src="./assets/viewMenuArr.png" class="disappearJ" style="padding-bottom: 10px; padding-left: 4px;" alt=""><img src="./assets/mobileViewMenuArr.png" class="mobileArrowsJ" style="padding-bottom: 5px; margin-left: 15px;" alt=""></button></a>
 
-    <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 100px;">
-        <div class="row disappearJ">
-            <div class="col-4 ">
+    <div class="container-fluid bgWhiteJ infoPadJ">
+        <div class="row">
+            <div class="col-4 disappearJ">
                 <div class="row centerJ">
                     <img class="infoLogoSizeJ" src="./assets/open-sign.png" alt="Picture of an open sign">
                 </div>
@@ -133,28 +133,58 @@
                 </div>
 
             </div>
-            <div class="col-4">
-                <div class="row centerJ"><img class="infoLogoSizeJ2" src="./assets/location.png"
+            <div class="col-12  col-md-4">
+                <div class="row centerJ disappearJ"><img class="infoLogoSizeJ2" src="./assets/location.png"
                         alt="Picture of location pin">
                 </div>
-                <div class="row txtCenterJ abrilFatfaceJ" style="padding-top: 30px">
+                <div class="row txtCenterJ abrilFatfaceJ disappearJ" style="padding-top: 30px">
                     <h3 class="infoTxtSizeJ">LOCATION</h3>
                 </div>
-                <div class="row txtCenterJ centerJ sansCollectionJ" style="padding-top: 10px">
+                <div class="row txtCenterJ centerJ sansCollectionJ disappearJ" style="padding-top: 10px">
                     <h3 class="infoTxtSizeJ sansCollectionJ" style="width: 420px;">3330 E Hammer Ln Ste C Stockton, CA
                         95212</h3>
                 </div>
 
-                <div class="row" style="padding-top: 75px;">
+                <div class="row centerJ">
+                    <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Open Hours</p>
+                </div>
+                <div class="row centerJ">
+                    <hr class="mobileHr">
+                </div>
+                <div class="row centerJ">
+                    <p class="sansCollectionJ mobileInfoJ mobileInfoTxt"> Mon - Tues: 9-5 
+                        Wednesday: CLOSED
+                        Thur - Sun: 9-5 </p>
+                </div>
+                <div class="row centerJ" style="margin-top: 30px;">
+                    <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Location</p>
+                </div>
+                <div class="row centerJ">
+                    <hr class="mobileHr">
+                </div>
+                <div class="row centerJ">
+                    <p class="sansCollectionJ mobileInfoJ mobileInfoTxt"> 3330 E Hammer Ln Ste C Stockton, CA 95212</p>
+                </div>
+                <div class="row centerJ" style="margin-top: 30px;">
+                    <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Contact</p>
+                </div>
+                <div class="row centerJ">
+                    <hr class="mobileHr">
+                </div>
+                
+                <div class="row centerJ">
+                    <p class="sansCollectionJ mobileInfoJ mobileInfoTxt">(209) 475-0652</p>
+                </div>
+
+                <div class="row learnMorePad">
                     <a class="centerJ" style="text-decoration: none;" href="./pages/ContactUs.html">
-                        <button class="btn btn-primary sansCollectionJ viewMenuBtnJ">Learn
-                            More <img src="./assets/learnMoreArr.png" style="padding-left: 2px; padding-bottom: 8px;" alt=""></button>
+                        <button class="btn btn-primary sansCollectionJ viewMenuBtnJ">Learn More <img class="disappearJ" src="./assets/learnMoreArr.png" style="padding-left: 2px; padding-bottom: 8px;" alt=""> <img src="./assets/learnMoreArr.png" class="mobileArrowsJ" style="padding-bottom: 5px; margin-left: 15px;" alt=""></button>
                     </a>
                 </div>
 
 
             </div>
-            <div class="col-4">
+            <div class="col-4 disappearJ">
                 <div class="row centerJ">
                     <img class="infoLogoSizeJ imgCoverJ" src="./assets/contact-mail.png" alt="Picture of mail icon">
                 </div>
@@ -278,7 +308,8 @@
             </div>
         </div>
         <div class="row centerJ my-4" style="padding-top: 50px; padding-bottom: 90px;">
-            <button class="btn btn-primary sansCollectionJ viewSandwichesBtn">View Sandwiches <img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 25px; padding-bottom: 2px;"></button>
+            <button class="btn btn-primary sansCollectionJ viewSandwichesBtn disappearJ">View Sandwiches <img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 25px; padding-bottom: 2px;"></button>
+            <button class="btn btn-primary sansCollectionJ viewSandwichesBtn appearJ">View More<img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 30px; padding-bottom: 2px;"></button>
         </div>
         <div class="row homePageMargin disappearJ">
             <div class="col">
@@ -386,7 +417,8 @@
             </div>
         </div>
         <div class="row centerJ mt-1" style="padding-top: 40px; padding-bottom: 75px;">
-            <button class="btn btn-primary sansCollectionJ viewSandwichesBtn">View Drinks<img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 30px; padding-bottom: 2px;"></button>
+            <button class="btn btn-primary sansCollectionJ viewSandwichesBtn disappearJ">View Drinks<img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 30px; padding-bottom: 2px;"></button>
+            <button class="btn btn-primary sansCollectionJ viewSandwichesBtn appearJ">View More<img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 30px; padding-bottom: 2px;"></button>
         </div>
         <div class="container-fluid reviewPaddingJ disappearJ">
             <div id="carouselExample" class="carousel slide bgWhiteJ">
