--- a/index.html
+++ b/index.html
@@ -145,18 +145,18 @@
                         95212</h3>
                 </div>
 
-                <div class="row centerJ">
+                <div class="row centerJ appearJ">
                     <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Open Hours</p>
                 </div>
-                <div class="row centerJ">
+                <div class="row centerJ appearJ">
                     <hr class="mobileHr">
                 </div>
-                <div class="row centerJ">
+                <div class="row centerJ appearJ">
                     <p class="sansCollectionJ mobileInfoJ mobileInfoTxt"> Mon - Tues: 9-5 
                         Wednesday: CLOSED
                         Thur - Sun: 9-5 </p>
                 </div>
-                <div class="row centerJ" style="margin-top: 30px;">
+                <div class="row centerJ " style="margin-top: 30px;">
                     <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Location</p>
                 </div>
                 <div class="row centerJ">
