--- a/index.html
+++ b/index.html
@@ -156,16 +156,16 @@
                         Wednesday: CLOSED
                         Thur - Sun: 9-5 </p>
                 </div>
-                <div class="row centerJ " style="margin-top: 30px;">
+                <div class="row centerJ appearJ" style="margin-top: 30px;">
                     <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Location</p>
                 </div>
-                <div class="row centerJ">
+                <div class="row centerJ appearJ">
                     <hr class="mobileHr">
                 </div>
-                <div class="row centerJ">
+                <div class="row centerJ appearJ">
                     <p class="sansCollectionJ mobileInfoJ mobileInfoTxt"> 3330 E Hammer Ln Ste C Stockton, CA 95212</p>
                 </div>
-                <div class="row centerJ" style="margin-top: 30px;">
+                <div class="row centerJ appearJ" style="margin-top: 30px;">
                     <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Contact</p>
                 </div>
                 <div class="row centerJ">
