--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                 <div class="row centerJ appearJ" style="margin-top: 30px;">
                     <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Contact</p>
                 </div>
-                <div class="row centerJ">
+                <div class="row centerJ appearJ">
                     <hr class="mobileHr">
                 </div>
                 
-                <div class="row centerJ">
+                <div class="row centerJ appearJ">
                     <p class="sansCollectionJ mobileInfoJ mobileInfoTxt">(209) 475-0652</p>
                 </div>
 
