--- a/index.html
+++ b/index.html
@@ -145,36 +145,37 @@
                         95212</h3>
                 </div>
 
-                <div class="row centerJ appearJ">
+                <div class="appearJ"><div class="row centerJ ">
                     <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Open Hours</p>
                 </div>
-                <div class="row centerJ appearJ">
+                <div class="row centerJ ">
                     <hr class="mobileHr">
                 </div>
-                <div class="row centerJ appearJ">
+                <div class="row centerJ ">
                     <p class="sansCollectionJ mobileInfoJ mobileInfoTxt"> Mon - Tues: 9-5 
                         Wednesday: CLOSED
                         Thur - Sun: 9-5 </p>
                 </div>
-                <div class="row centerJ appearJ" style="margin-top: 30px;">
+                <div class="row centerJ " style="margin-top: 30px;">
                     <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Location</p>
                 </div>
-                <div class="row centerJ appearJ">
+                <div class="row centerJ ">
                     <hr class="mobileHr">
                 </div>
-                <div class="row centerJ appearJ">
+                <div class="row centerJ ">
                     <p class="sansCollectionJ mobileInfoJ mobileInfoTxt"> 3330 E Hammer Ln Ste C Stockton, CA 95212</p>
                 </div>
-                <div class="row centerJ appearJ" style="margin-top: 30px;">
+                <div class="row centerJ " style="margin-top: 30px;">
                     <p class="abrilFatfaceJ mobileInfoJ mobileInfoHeaderJ">Contact</p>
                 </div>
-                <div class="row centerJ appearJ">
+                <div class="row centerJ ">
                     <hr class="mobileHr">
                 </div>
                 
-                <div class="row centerJ appearJ">
+                <div class="row centerJ ">
                     <p class="sansCollectionJ mobileInfoJ mobileInfoTxt">(209) 475-0652</p>
-                </div>
+                </div></div>
+                
 
                 <div class="row learnMorePad">
                     <a class="centerJ" style="text-decoration: none;" href="./pages/ContactUs.html">
